fix videoplayer on mobile

--- a/src/components/pages/chat-bot/chat-bot.css
+++ b/src/components/pages/chat-bot/chat-bot.css
@@ -34,6 +34,6 @@
     .video-container object,
     .video-container embed {
         width: 100%;
-        height: 90%;
+        height: 100%;
     }
 }
